# MLOps-lab12

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
airflow/: airflow.cfg
config/: airflow.cfg
dags/: 02_taskflow_pipeline.py  03_scheduling.py  04_backfilling.py  05_scheduling_with_venvs.py  06_s3_integration.py  07_connections_and_variables.py  08_nyc_taxi_ingest.py  09_nyc_taxi_training.py
localstack-init/ready.d/: 01-create-buckets.sh
postgres-init/: init.sql
